--- a/package/lean/luci-app-v2ray-server/po/zh-cn/v2ray_server.po
+++ b/package/lean/luci-app-v2ray-server/po/zh-cn/v2ray_server.po
@@ -180,3 +180,9 @@ msgstr "未运行"
 
 msgid "RUNNING"
 msgstr "运行中"
+
+msgid "Custom"
+msgstr "自定义配置文件"
+
+msgid "Cutome config file content"
+msgstr "自定义配置文件内容"
